--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+      integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q="
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
   <body>
+    <script src="assets/script.js" async></script>
     <header></header>
-    <main></main>
+    <main>
+      <p class="ui"></p>
+    </main>
     <footer></footer>
   </body>
 </html>
