Mise en ligne du site

--- a/index.html
+++ b/index.html
@@ -12,13 +12,30 @@
       integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
   </head>
   <body>
     <script src="assets/script.js" async></script>
     <header></header>
     <main>
-      <p class="ui"></p>
+      <form class="ui form">
+        <div class="field">
+          <label>First Name</label>
+          <input type="text" name="first-name" placeholder="First Name">
+        </div>
+        <div class="field">
+          <label>Last Name</label>
+          <input type="text" name="last-name" placeholder="Last Name">
+        </div>
+        <div class="field">
+          <div class="ui checkbox">
+            <input type="checkbox" tabindex="0" class="hidden">
+            <label>I agree to the Terms and Conditions</label>
+          </div>
+        </div>
+        <button class="ui button" type="submit">Submit</button>
+      </form>
     </main>
     <footer></footer>
   </body>
